--- a/prompt.html
+++ b/prompt.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 1 de js</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <script src="./aula01.js"></script>
-    
+    <script src="./Prompt.js"></script>
 </body>
 </html>
